# house-party

./: README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
api/: models.py  serializer.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  urls.py
frontend/src/components/: App.js  CreateRoomPage.js  HomePage.js  Info.js  Log.js  MusicPlayer.js  R_log.js  R_reg.js  Room.js  RoomJoinPage.js  SignIn.js  SignUp.js
frontend/static/css/: index.css
frontend/static/frontend/: main.js  main.js.LICENSE.txt
frontend/templates/frontend/: index.html
house_party_project/: asgi.py  settings.py  urls.py  wsgi.py
music_controller/: settings.py  urls.py
spotify/: credentials.py  models.py  urls.py  util.py  views.py
